# open-env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  terminal_demo.py  train_rl.py  validator.py  verify_refactor.py
baseline/: rule_based_agent.py
env/: __init__.py  body_profiles.py  config.py  cultural_context.py  gym_wrapper.py  models.py  occasions.py  reward.py  style_env.py  style_rules.py  trend_engine.py  visual_score.py  wardrobe.py  weather_sim.py
server/: __init__.py  app.py
tasks/: graders.py
